--- a/frontend/src/styles/style.sass
+++ b/frontend/src/styles/style.sass
@@ -36,6 +36,7 @@ body
 	&:focus
 		border-color: $my_blue !important
 		box-shadow: 0 0 10px 0.1rem rgba($my_blue, 0.9), inset 0 0 10px 0.1rem rgba($my_blue, 0.9)
+		color: inherit
 	&:active
 		border-color: $my_blue !important
 		box-shadow: inset 0 0 10px 0.2rem rgba($my_blue, 0.9)
@@ -277,6 +278,9 @@ body
 	padding: 0.1rem
 	padding-top: 1rem
 	margin-top: 8vh
+	a
+		&:visited
+			color: inherit
 
 .control-panel__user
 	display: flex
