del items, pagination

--- a/frontend/src/styles/style.sass
+++ b/frontend/src/styles/style.sass
@@ -349,3 +349,7 @@ body
 @for $i from 1 through 4
   .#{blank}-#{$i}
     height: #{$i}vh
+
+.pagination__count
+	min-width: 3rem
+	text-align: center
